--- a/html/Tranglienhe.html
+++ b/html/Tranglienhe.html
@@ -363,8 +363,8 @@
                     <small class="error-message" id="phoneError"></small>
                 </div>
                 <div class="form-group">
-                    <label for="message">Tin nhắn:</label>
-                    <textarea class="form-control" id="message" rows="5" placeholder="Nhập ý kiến của bạn"></textarea>
+                    <label for="message">Nội dung liên hệ:</label>
+                    <textarea class="form-control" id="message" rows="5" placeholder="Hãy nhập ý kiến của bạn"></textarea>
                 </div>
                 <button type="submit" class="btn btn-submit">Gửi</button>
             </form>
